--- a/css/main.css
+++ b/css/main.css
@@ -360,6 +360,11 @@ figure .buttons {
   top: 45%;
   left: 24%;
 }
+figure .single_buttons{
+  position: absolute;
+  top: 45%;
+  left:35%;
+}
 figure figcaption {
   padding: 20px 25px;
   margin-top: 0;
