--- a/css/main.css
+++ b/css/main.css
@@ -175,7 +175,7 @@ a:hover {
   font-weight: 300;
   margin-bottom: 38px;
   line-height: 27px;
-  text-transform: uppercase;
+  /*text-transform: uppercase;*/
   color: #666;
   font-family: 'Roboto', sans-serif;
   margin-top: 25px;
